# Quiosque

./: .gitignore  API.md  CLIENT_SETUP_GUIDE.md  DOCKER_PRODUCTION.md  README.md  WORKFLOW_GUIDE.md  create-and-deploy-new.sh  create-and-deploy.sh  deploy-novo.ps1  docker-compose.yml  env.example  env.prod  env.prod.example  pyproject.toml  start-dev.ps1  start-dev.sh  test-ports.sh
backend/: .gitignore  Dockerfile  README.md  env.example  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 07884ee0e539_add_tracking_fields_to_orders.py  f101ec5b7d66_initial_migration.py
backend/app/: __init__.py  db.py  dependencies.py  middleware_logging.py
backend/app/api/: auth.py  categories.py  client_auth.py  print_queue.py  print_queues.py  products.py  reports.py  rooms.py  simple_client_auth.py  system_status.py  tables.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: category.py  client.py  order.py  payment.py  print_queue.py  product.py  room.py  (+5 more)
backend/docs/: api_restructure.md  categories_api.md  orders_api.md  print_queues_api.md  system_status_api.md  upload_api.md
backend/scripts/: README.md  README_categories.md  create_agent_user.py  dev_setup.ps1  dev_setup.py  dev_setup.sh  format_code.py  generate_secret_key.py  init_print_queues.py  init_system_status.py  initialize_db.py  migrate_categories.py  migrate_display_order.py  migrate_print_queue_id.py  quick_dev_setup.py  run_dev.py  seed_all.py  seed_categories.py  seed_close_tables_with_room_charge.py  seed_orders.py  seed_orders_with_payments.py  seed_products.py  seed_rooms.py  seed_tables.py  seed_tables_with_room.py  test_cancel_finished_orders.py  test_cancel_order.py  test_categories.py  test_categories_and_products.py  test_category_ordering.py  test_category_print_queues.py  test_order_items_modification.py  test_print_queues.py  test_print_queues_api.py  test_products_endpoints.py  test_products_with_categories.py  test_room_consumption_report.py  test_room_deletion.py  test_room_tables.py  test_system_status.py
backend/tests/: test_flow.py
(+90 files in other folders)
